
6.08  2015-04-08

6.07  2015-04-07
  - Fixed Windows bug in "daemon.t".

6.06  2015-04-06
  - Added element_count_is method to Test::Mojo. (Zoffix)
  - Added "chat.pl" to example scripts.
  - Improved Mojo::DOM::CSS to handle attribute selectors with single quotes
    correctly.

6.05  2015-03-24
  - Fixed circular require bug in Mojo::Base and Mojo::Util.

6.04  2015-03-23
  - Improved Mojo::Reactor::EV and Mojo::Reactor::Poll to fail more
    consistently.
  - Improved Mojo::Base performance slightly.
  - Fixed a few bugs in Mojo::DOM::CSS that required class, id and attribute
    selectors, as well as pseudo-classes, to be in a specific order.

6.03  2015-03-16
  - Added support for overriding the HTTP request method with the _method query
    parameter.
  - Added suggested_method method to Mojolicious::Routes::Route.
  - Improved portability of some tests.

6.02  2015-03-09
  - Added daemon attribute to Mojo::Server::Morbo.
  - Improved portability of Mojo::Server::Morbo.
  - Fixed empty template handling in Mojo::Template.

6.01  2015-03-03
  - Added content_with helper to Mojolicious::Plugin::DefaultHelpers.
  - Relaxed request-line handling in Mojo::Message::Request.
  - Fixed code name in version command and built-in templates.

6.0  2015-02-26
  - Code name "Clinking Beer Mugs", this is a major release.
  - Removed name listing support from param method in Mojolicious::Controller.
  - Removed name listing support from param method in Mojo::Parameters.
  - Removed name listing support from error and param methods in
    Mojolicious::Validator::Validation.
  - Removed multi-name support from cookie, param and signed_cookie methods in
    Mojolicious::Controller.
  - Removed multi-name support from param method in
    Mojolicious::Validator::Validation.
  - Removed multi-name support from param method in Mojo::Parameters.
  - Removed multi-name support from cookie and upload methods in Mojo::Message.
  - Removed custom socket support from Mojo::UserAgent.